<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_titlebar" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@mipmap/image_failure"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/pay_fail_has_tip_string"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_225"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pay_type_iv"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/time"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/pay_success_pay_way_string"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/pay_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_5"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/huang"
                />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_20"
                android:background="@mipmap/pay_money"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_gravity="center_vertical"
                android:text="@string/pay_success_money_string"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/pay_money_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/huang"
                />

        </LinearLayout>

        <Button
            android:id="@+id/pay_again_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:background="@drawable/pay_complete_button_shape"
            android:text="@string/pay_fail_pay_again_string"
            android:textColor="#326ACF"
            android:textSize="@dimen/sp_20"
            />

        <Button
            android:id="@+id/pay_give_up_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_23"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:background="@drawable/pay_complete_button_shape"
            android:text="@string/pay_fail_pay_give_up_string"
            android:textColor="#326ACF"
            android:textSize="@dimen/sp_20"
            />

    </LinearLayout>

</LinearLayout>