<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/activity_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_titlebar" />

        <RelativeLayout
            android:id="@+id/patient_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="5dp"
            android:paddingLeft="@dimen/dp_18"
            android:paddingRight="@dimen/dp_18"
            android:background="@color/white"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/care_name"
                    />

                <TextView
                    android:id="@+id/default_patient_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="@string/user_note_username_string"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/patient_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/font_gray_5"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/right_arrow"
                    android:layout_marginLeft="@dimen/dp_5"
                    />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@color/huang"
            android:layout_marginTop="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_18">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_note_tip_string"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pregnancy_cycle_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_1"
            android:paddingLeft="@dimen/dp_18"
            android:paddingRight="@dimen/dp_18"
            android:background="@color/white"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/care_pregnant"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="@string/user_note_pregnancy_cycle_string"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/pregnancy_cycle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/font_gray_5"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_130"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_1"
            android:paddingLeft="@dimen/dp_18"
            android:paddingRight="@dimen/dp_18"
            android:background="@color/white"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/care_friend"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="@string/user_note_emergency_contact_person_string"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <EditText
                android:id="@+id/emergency_contact_person_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/user_note_emergency_contact_person_hint_string"
                android:textColor="@color/font_gray_5"
                android:textColorHint="@color/font_gray_5"
                android:textSize="@dimen/sp_14"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_130"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_1"
            android:paddingLeft="@dimen/dp_18"
            android:paddingRight="@dimen/dp_18"
            android:background="@color/white"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/care_friendphone"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="@string/user_note_emergency_contact_tel_string"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <EditText
                android:id="@+id/emergency_contact_tel_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/user_note_emergency_contact_tel_hint_string"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/font_gray_5"
                android:textColorHint="@color/font_gray_5"
                android:textSize="@dimen/sp_14"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_130"
                />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_pressed_selector_shape"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_70"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:text="@string/user_note_save_btn_string"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        />

</RelativeLayout>