<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/layout_titlebar" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/image_result"
            android:layout_marginTop="@dimen/dp_35"
            />

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="29:59:35"
            android:textSize="@dimen/sp_19"
            android:textColor="@color/huang"
            />

        <TextView
            android:id="@+id/tip_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/request_result_tip_string"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/font_gray_5"
            />

        <LinearLayout
            android:id="@+id/time_end_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_result_time_end_string"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/font_gray_5"
                />

            <TextView
                android:id="@+id/service_phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/red"
                />

        </LinearLayout>

        <Button
            android:id="@+id/complete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_60"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:background="@drawable/button_pressed_selector_shape"
            android:text="@string/request_result_complete_string"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/white"
            />

    </LinearLayout>

</LinearLayout>